fixed spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -716,11 +716,27 @@ body {
 
 @media screen and (max-width: 768px) {
   .qualification__main_description {
-    color: white;
-    margin-bottom: 7rem;
-    line-height: 1.5;
-    font-size: large;
+    margin-bottom: 2.5rem;
   }
+}
+
+.resume-link {
+  max-width: 60%;
+  display: inline-block;
+  padding: 1rem 1rem;
+  font-weight: var(--fw-semibold);
+  font-size: 1.5rem;
+  transition: var(--transition);
+  background-color: var(--color-primary);
+  color: white;
+  font-weight: 500;
+  border: solid 1px;
+  margin: 1rem;
+}
+
+.resume-link:hover {
+  background-color: var(--color-primary);
+  color: #CCF381
 }
 
 .timeline {
